2002-01-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: look for rtc_lock
 
	* module/compat.h: use rtc_lock if there

2002-01-16  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/apic_up_compat.h: cleanup + allow compile
	  !CONFIG_X86_LOCAL_APIC on 2.4/2.5. (only compile
	  tested)

2002-01-15  Philippe Elie  <ph_e@club-internet.fr>

	* events/op_events.c: avoid gui crash: event name must
	  contain only one word. If you test RTC patch destroy
	  ~/.oprofile/oprof_start_event#0

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/compat.c:
	* module/op_rtc.c: 2.2 modversions fix
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* module/compat.h:
	* module/compat.c:
	* module/op_rtc.c: fix 2.2 compile

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in: whoops, forgot to commit this
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: some improvements for RTC
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: fix "op_start && op_stop" bug using multiple
	  dump_stop writes.
 
2002-01-14  Dave Jones <davej@suse.de>

	* pp/op_time.cpp: fix for printing (NaN%) in the zero sample case.

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_rtc.c: remove unneeded check

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: fix for PMC case
 
2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: take --rtc-value

	* dae/oprofiled.c: set headers sensibly for RTC

	* doc/oprofile.1.in: update

	* doc/oprofile.sgml: RTC update

	* events/op_events_descr.c: 
	* events/op_events.c: good name for RTC event 

	* gui/oprof_start.cpp: basic support for RTC

	* module/op_rtc.c: implement and use rtc_value

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: load module at start. Handle CPU_RTC.
	  Avoid sysctl for now on RTC case.
